# MDiscordBot

./: .env.example  .gitignore  .replit  ai_mode.py  ai_provider.py  bot.py  bot.py.backup  bot_dev_tools.py  config.py  config_store.py  continuity_logging.py  deploy.touch  dev_restart.py  heartbeat.py  keep_alive.py  main.py  memory_bridge.py  metrics_aggregator.py  pyproject.toml  replit.md  requirements.txt  restart_bot.sh  watch_and_restart.py
cogs/: about_cog.py  ai_mode_cog.py  ai_persona_cog.py  backup_clone_cog.py  basic_commands.py  botnick_cog.py  chat_cog.py  chat_listener_cog.py  command_hub_cog.py  debate_mvp.py  dev_portal_tools_cog.py  diag_cog.py  digest_cog.py  disaster_recovery_cog.py  dm_start_cog.py  ethics_cog.py  faq_cog.py  hackin_cog.py  health_cog.py  help_cog.py  invite_cog.py  layer_cog.py  lore_cog.py  meme_feed_cog.py  memes_cog.py  memory_bridge_cog.py  mission_cog.py  mod_finalize_cog.py  mod_recommender_cog.py  moderation_cog.py  observer_cog.py  onboarding_fasttrack_cog.py  owner_mvp.py  persona.py  pin_reaction_cog.py  presence_cog.py  promotion_cog.py  purge_mvp.py  reaction_pin_cog.py  roles_cog.py  (+12 more)
cogs/utils/: morpheus_voice.py
data/: faq.json  mission.json  mission_memory.json  void_lines.txt  void_pulse_state.json  wellbeing.json  youtube_announcer.json  youtube_state.json
utils/: __init__.py  auth.py  guards.py
